........S. [ZBXNEXT-2279] zabbix[proxy,,lastaccess] will be always performed by server (Sasha)
A.F.....S. [ZBXNEXT-1133] added support for custom expressions in action conditions (Krists)
...G...... [ZBXNEXT-1300] added low-level discovery support for enumerating CPUs on all supported platforms (Juris)
A......... [ZBX-8459] made possible CORS AJAX requests for JSON API (Andrejs)

Bug fixes:
...G...... [ZBX-8512] fixed processing of web.page.regexp without a newline character in the end of http GET response (Arturs)
..F....... [ZBX-8471] fixed removing slides from slideshows in cases when some slides have been deleted (Krists)
..F....... [ZBX-8509] fixed item custom multiplier formula default value to be "1" and not become unset in some cases (Krists)
A.F....... [ZBX-8430] fixed cascade removal of action conditions when deleting related discovery rule and checks (Andrejs)
..F....... [ZBX-8432] fixed multiselect resize and IE11 visual issues (Oleg)
..F....... [ZBX-8478] fixed slideshow handling in monitoring for slideshows without slides (Krists)
A......... [ZBX-8493] fixed usergroup.massadd API call to not create duplicate entries in "rights" table (Krists)
..F....... [ZBX-8492] fixed maintenance periods without hosts/hostgroups to be accessible by both admins and superadmins (Krists)
..F....... [ZBX-2570] fixed dashboard widgets showing error messages about expired/broken session (Krists)
A......... [ZBX-8428] fixed item.get API call to return values for "lastvalue", "lastclock", "lastns", "prevvalue" only for last 24 hours (Krists)
..F....... [ZBX-8468] removed unnecessary "empty" buttons in map element popups (Andrejs)
..F....... [ZBX-8431] added context for text string 'Name' (Oleg)
..F....... [ZBX-8467] removed "make_latest_issues" function extra argument (Oleg)
..F....... [ZBX-8436] fixed page layout being broken with IE8 in cases when item rows are added or removed (Krists)