@@ -28,6 +28,7 @@ require_once __DIR__.'/../../include/items.inc.php';
 require_once __DIR__.'/../../include/discovery.inc.php';
 require_once __DIR__.'/../../include/actions.inc.php';
 require_once __DIR__.'/../../include/validate.inc.php';
+require_once __DIR__.'/../../include/services.inc.php';
 
 // register autoloader
 require_once __DIR__.'/../../include/classes/core/CAutoloader.php';
